--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["VladGalchevsky"]
 [tool.poetry.dependencies]
 python = "3.10.6"
 Django = "3.2"
+Pillow = "9.3.0"
+psycopg2-binary = "2.9.5"
 
 [tool.poetry.dev-dependencies]
 
