--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "html.validate.styles": false,
     "python.analysis.extraPaths": [
         "./books_proj"
-    ]
+    ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.python"
+    },
+    "python.formatting.provider": "none",
+    "python.analysis.typeCheckingMode": "off"
 }
