--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ psycopg2-binary = "2.9.5"
 django-crispy-forms = "1.14.0"
 django-colorfield = "^0.8.0"
 django-colorful = "^1.3"
+django-allauth = "0.52.0"
+django-smtp-ssl = "1.0"
 
 [tool.poetry.dev-dependencies]
 
